--- a/index.html
+++ b/index.html
@@ -131,12 +131,12 @@
                             <!-- Card content -->
                             <div class="card-content">
                                 <!-- Card marca -->
-                                <div class="marca" style="background-color: #C80626; color: white">
+                                <div id="color-bar" class="marca" style="background-color: #C80626; color: white">
                                     <div class="marca-texto">
-                                        <span>Engel&Völkers&nbsp;</span><span class="partner">· Tu partner inmobiliario</span>
+                                        <span id="cliente">Engel&Völkers</span><span class="partner">&nbsp;· Tu partner inmobiliario</span>
                                     </div>
                                     <div class="marca-logo">
-                                        <img src="img/engel.png" alt="">
+                                        <img id= "logo-cliente" src="img/engel.png" alt="">
                                     </div>
                                 </div>
                                 <!-- Card datos -->
@@ -184,7 +184,7 @@
                     </div>
                     <!-- publi -->
                     <div class="dominance">
-                        <img src="img/728x90_navalcarnero.png" alt="">
+                        <img id="banner728" src="img/728x90_navalcarnero.png" alt="">
                     </div>
                     <!-- Card 2 -->
                     <div class="card-container_large">
@@ -1394,12 +1394,12 @@
                                     <button class="acces-mapa-draw"><span class="material-icons">draw</span>Dibujar</button>
                                 </div>   
                             </div>  -->
-                            <img src="img/300x600_navalcarnero.png" alt="">
+                            <img id="banner600" src="img/300x600_navalcarnero.png" alt="">
                         </div>
                     </div>
                     <div class="sidebar-publi-2">
                         <div class="publi-contenedor">
-                            <img src="img/300x50_navalcarnero.png" alt="">
+                            <img id="banner50" src="img/300x50_navalcarnero.png" alt="">
                             <img src="img/300x600_1.jpg" alt="">
                         </div>
                     </div>
@@ -1412,6 +1412,6 @@
             </div>
         </div>
     </div>
-    <script src="js/minified/app.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
 </html>
